fixing background - hiding behind header

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -49,7 +49,7 @@ button:disabled {
   font-size: 0;
   line-height: 0;
   vertical-align: bottom;
-  background-size: 100%;
+  background-size: 'cover';
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-image: url('/images/scholacity_logo_freelogodesign.png'); 
